tests/transpiler/x/hs/short_circuit.error
run: exit status 1

/workspace/mochi/tests/transpiler/x/hs/short_circuit.hs:12:21: error:
    • Couldn't match expected type ‘Bool’ with actual type ‘IO Bool’
    • In the second argument of ‘(&&)’, namely ‘boom 1 2’
      In the first argument of ‘print’, namely ‘(False && boom 1 2)’
      In a stmt of a 'do' block: print (False && boom 1 2)
   |
12 |     print (False && boom 1 2)
   |                     ^^^^^^^^

/workspace/mochi/tests/transpiler/x/hs/short_circuit.hs:13:20: error:
    • Couldn't match expected type ‘Bool’ with actual type ‘IO Bool’
    • In the second argument of ‘(||)’, namely ‘boom 1 2’
      In the first argument of ‘print’, namely ‘(True || boom 1 2)’
      In a stmt of a 'do' block: print (True || boom 1 2)
   |
13 |     print (True || boom 1 2)
   |                    ^^^^^^^^
