tests/transpiler/x/hs/short_circuit.hs
{-# LANGUAGE DuplicateRecordFields #-}
{-# LANGUAGE OverloadedRecordDot #-}
{-# LANGUAGE NoFieldSelectors #-}
-- Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:46 GMT+7
boom a b = do
    putStrLn "boom"
    return (True)


main :: IO ()
main = do
    print (False && boom 1 2)
    print (True || boom 1 2)
